@@ -1,3 +1,12 @@
+2012-05-27  Yoshifumi Inoue  <yosin@chromium.org>
+
+        [WTF] Introduce UINT64_C to MathExtras.h
+        https://bugs.webkit.org/show_bug.cgi?id=87485
+
+        Reviewed by Kent Tamura.
+
+        * wtf/MathExtras.h:
+
 2012-05-25  Filip Pizlo  <fpizlo@apple.com>
 
         weakCompareAndSwap should work on Windows
